--- a/package.json
+++ b/package.json
@@ -7,13 +7,28 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MidhunSreekkuttan/Discord-Bot.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/MidhunSreekkuttan/Discord-Bot/issues"
+  },
+  "homepage": "https://github.com/MidhunSreekkuttan/Discord-Bot#readme",
   "dependencies": {
+    "@discord-player/extractor": "^7.1.0",
+    "@discordjs/builders": "^1.13.1",
+    "@discordjs/rest": "^2.6.0",
+    "@discordjs/voice": "^0.19.0",
+    "discord-player": "^7.1.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.3.1",
-    "nodemon": "^3.1.11"
+    "ffmpeg-static": "^5.3.0",
+    "nodemon": "^3.1.11",
+    "youtube-sr": "^4.3.12"
   }
 }
